# WIP

./: .gitignore  FEATURE_GUIDE.md  LICENSE  README.md  access_workflow_capture.md  app_overview.md  features.md  pyproject.toml  questions.md  run_tasktracker.bat  tech_decisions.md  todo.md
plans/: 01_dashboard_and_saved_views.md  02_notes_fulltext_search.md  03_task_templates.md  04_attachments.md  05-01_quick_capture_foreground.md  05-02_task_todo_resolution.md  05_quick_capture.md  06-01_dependency_picker_search.md  06_tags_and_dependencies.md  07_child_tasks_rollup.md  08_effort_and_time_log.md  09_external_links.md  10_inbox_actions.md  11_reminders_and_aging.md  12_board_view.md  13_intake_and_migration.md  14_safety_net.md  README.md
tasktracker/: __init__.py  __main__.py  launcher_settings.py  paths.py  vault_attachments_crypto.py
tasktracker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tasktracker/db/: __init__.py  models.py  session.py  (+1 more)
tests/: conftest.py  test_attachments.py  test_calendar_quick_edit.py  test_dashboard.py  test_date_format.py  test_dependencies.py  test_dependency_picker_dialog.py  test_launcher_settings.py  test_parent_child.py  test_parent_picker_dialog.py  test_priority.py  test_quick_capture.py  test_reporting_service.py  test_search_fts.py  test_settings_store_saved_views.py  test_shift_service.py  test_tags.py  test_task_service.py  test_task_templates.py  test_text_scale.py  test_themes.py  test_user_guide_theme.py
vault_test/: auth.json  tasks.db.enc  ui_settings.json
vault_three/: auth.json  tasks.db.enc
(+47 files in other folders)
