[project]
name = "tasktracker"
version = "0.1.0"
description = "Desktop task tracking app (WIP)"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "SQLAlchemy>=2.0,<3",
    "alembic>=1.13,<2",
    "PySide6>=6.6,<7",
    "openpyxl>=3.1,<4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
]

[project.scripts]
tasktracker = "tasktracker.__main__:main"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["tasktracker*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
